<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contact"
    android:orientation="vertical">

    <include android:id="@+id/actionBarContact"
        layout="@layout/actionbar"
        ></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/pad_about"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvTituloContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_contact"
            android:textStyle="bold"
            android:textSize="@dimen/nombre"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etx_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/form"
            app:layout_constraintTop_toBottomOf="parent"
            android:singleLine="true"
            android:hint="@string/form_nombre"
            android:layout_marginBottom="10dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etx_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/form"
            android:singleLine="true"
            android:hint="@string/form_email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/tv_comentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/form"
            android:text="@string/form_mensaje"
            android:paddingLeft="@dimen/pad_form"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etx_comentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/form"
            android:lines="3"
            />
        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_send"
            android:theme="@style/MiBotonRaised"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/top_btn"
            android:textAllCaps="false"
            android:textSize="@dimen/txtboton"
            android:paddingRight="@dimen/pad_btn"
            android:paddingLeft="@dimen/pad_btn"
            />
    </LinearLayout>


</LinearLayout>